Change build.gradle and settings.gradle

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,16 +1,17 @@
 pluginManagement {
     repositories {
+        gradlePluginPortal()
         google()
         mavenCentral()
-        gradlePluginPortal()
+        ivy { url 'https://developer.iristick.com/repo'}
     }
 }
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
     }
 }
-rootProject.name = "Iristick"
+rootProject.name = "Iristick Test"
 include ':app'
