--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,31 +3,19 @@ plugins {
 }
 
 android {
-    namespace 'com.example.iristick'
-    compileSdk 33
+    compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.iristick"
-        minSdk 27
-        targetSdk 33
+        applicationId "com.iristick.smartglass.iristicktest"
+        minSdk 26
+        targetSdk 32
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    allprojects {
-        repositories {
-            google()
-            mavenCentral()
-            ivy { url 'https://developer.iristick.com/repo' }
-        }
     }
 
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
@@ -40,11 +28,6 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.iristick.smartglass:core:1.3.4'
     implementation 'com.iristick.smartglass:support:1.3.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
 }
