--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,24 +3,44 @@
     package="com.example.iristick"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+
+    <uses-permission android:name="android.permission.CAMERA"/>
+
     <application
+        android:name=".IriApp"
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Iristick"
-        tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
+        >
+        <activity android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".camera.CameraActivity"
+            android:theme="@android:style/Theme.Material.NoActionBar"/>
+
+        <activity android:name=".barcode.BarcodeActivity" />
+
+        <activity android:name=".displaypresentation.DisplayPresentationActivity" />
+
+        <activity android:name=".displaysurface.DisplaySurfaceActivity" />
+
+        <activity android:name=".sensorscube.SensorsCubeActivity"
+            android:theme="@android:style/Theme.Material.NoActionBar" />
+
+        <activity android:name=".sensorsreadout.SensorsReadoutActivity"
+            android:theme="@android:style/Theme.Material.Light" />
+
+        <activity android:name=".touchpad.TouchpadActivity"
+            android:theme="@android:style/Theme.Material.Light" />
+
     </application>
 
 </manifest>
